--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.62.2",
     "react-native-add-calendar-event": "^3.0.2",
     "react-native-calendar-events": "^1.7.3",
+    "react-native-calendars": "^1.300.0",
+    "react-native-device-info": "^5.6.2",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "0.27.1",
